<resources>
    <string name="app_name">HardBank</string>
    <string name="account_holder">Hello, Guest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heyText">Hey,</string>
    <string name="loginNowText">Welcome Back!</string>
    <string name="ifNewUserText">If you are new /</string>
    <string name="CreateNewText">Create an account</string>
    <string name="forgotPasswordText">Forgot Password? /</string>
    <string name="resetPasswordText">Reset</string>
    <string name="loginText">Login</string>
    <string name="continueAsGuest">Continue as Guest</string>
    <string name="backText">Back</string>
    <string name="helloText">Hello,</string>
    <string name="continueWithText"> or\ncontinue with</string>
    <string name="enterInformationText">Create an Account</string>
    <string name="termsText">I agree with the Terms and Condition and the Privacy Policy</string>
    <string name="emailText">Email: </string>
    <string name="nameText">Name: </string>
    <string name="termsAndConditionText">Terms &amp; Conditions</string>
    <string name="hintSearchText">Search by Product, Brand &amp; more</string>

</resources>