<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/loginScreenWelcomeTextAndCreateAccountLayout"
        >
        <TextView
            android:id="@+id/heyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_serif"
            android:text="@string/heyText"
            android:textSize="22sp"
            android:textColor="#A4000000"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/loginNowText"
            android:layout_below="@+id/heyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_serif"
            android:text="@string/loginNowText"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textColor="#A4000000"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:id="@+id/createAccountLayout"
            android:layout_below="@+id/loginNowText">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ifYourAreNewText"
                android:text="@string/ifNewUserText"
                android:textSize="16sp"
                android:textColor="#A9A9A9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createNewText"
                android:text="@string/CreateNewText"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ifYourAreNewText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#BE000000"
                android:fontFamily="@font/droid_serif"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="35dp"
        android:gravity="center"
        android:layout_below="@+id/loginScreenWelcomeTextAndCreateAccountLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="20dp"
            android:paddingLeft="15dp"
            android:hint="Email Address"
            android:background="@drawable/edittext_border"
            android:id="@+id/loginEmailEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_border"
            android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="20dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_below="@+id/loginEmailEditText"
            android:hint="Password"
            android:id="@+id/loginPasswordEditText"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/forgotPasswordLayout"
            android:layout_below="@+id/loginPasswordEditText">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordText"
                android:text="@string/forgotPasswordText"
                android:textSize="16sp"
                android:textColor="#A9A9A9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ResetPasswordText"
                android:text="@string/resetPasswordText"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/forgotPasswordText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#BE000000"
                android:fontFamily="@font/droid_serif"
                />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/loginText"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:id="@+id/loginButton"
            android:layout_below="@id/forgotPasswordLayout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/continueAsGuestText"
            android:text="@string/continueAsGuest"
            android:textSize="16sp"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:textColor="#A9A9A9"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/droid_serif"
            />


    </RelativeLayout>

</RelativeLayout>