<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/signUpActivityNavLayout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#A9A9A9"
            android:text="@string/backText"
            android:layout_toRightOf="@id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:id="@+id/backTextSignUp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpActivityTextLayout"
        android:padding="20dp"
        android:layout_below="@id/signUpActivityNavLayout">

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/droid_serif"
            android:text="@string/helloText"
            android:textColor="#9F5A5656"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginNowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helloText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/droid_serif"
            android:text="@string/enterInformationText"
            android:textColor="#9F5A5656"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="35dp"
        android:gravity="center"
        android:layout_below="@+id/signUpActivityTextLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:paddingLeft="15dp"
            android:hint="Full Name"
            android:background="@drawable/edittext_border"
            android:id="@+id/signUpNameEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="20dp"
            android:paddingLeft="15dp"
            android:hint="Email Address"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_border"
            android:layout_below="@id/signUpNameEditText"
            android:id="@+id/signUpEmailEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_border"
            android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="20dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_below="@+id/signUpEmailEditText"
            android:hint="Password"
            android:id="@+id/signUpPasswordEditText"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termsCheckBox"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/termsText"
            android:layout_below="@+id/signUpPasswordEditText"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/loginText"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:id="@+id/signUpButton"
            android:layout_marginTop="20dp"
            android:layout_below="@id/termsCheckBox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/socialAccountText"
            android:text="@string/continueWithText"
            android:textSize="16sp"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:textColor="#A9A9A9"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/droid_serif"
            />


    </RelativeLayout>


</RelativeLayout>