<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/loginCustomerActivityBackNav">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#A9A9A9"
            android:text="@string/backText"
            android:layout_toRightOf="@id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:id="@+id/backTextSignUp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/loginScreenWelcomeTextAndCreateAccountLayout"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/hardBankLogoLoginCustomer"
            android:src="@drawable/hardbanklogo"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/loginNowText"
            android:layout_below="@+id/hardBankLogoLoginCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_serif"
            android:text="@string/loginNowText"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textColor="#A4000000"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:id="@+id/createAccountLayout"
            android:layout_below="@+id/loginNowText">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ifYourAreNewText"
                android:text="@string/ifNewUserText"
                android:textSize="16sp"
                android:textColor="#A9A9A9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createNewText"
                android:text="@string/CreateNewText"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ifYourAreNewText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#BE000000"
                android:fontFamily="@font/droid_serif"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="35dp"
        android:gravity="center"
        android:layout_below="@+id/loginScreenWelcomeTextAndCreateAccountLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpNameEditTextLayout"
            android:layout_marginTop="20dp"
            android:id="@+id/signUpEmailEditTextLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:drawablePadding="20dp"
                android:paddingLeft="15dp"
                android:hint="Email Address"
                android:background="@drawable/edittext_border"
                android:id="@+id/loginEmailEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpEmailEditTextLayout"
            android:id="@+id/loginPasswordEditTextLayout"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:hint="Password"
                android:id="@+id/loginPasswordEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/forgotPasswordLayout"
            android:layout_below="@+id/loginPasswordEditTextLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordText"
                android:text="@string/forgotPasswordText"
                android:textSize="16sp"
                android:textColor="#A9A9A9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetPasswordText"
                android:text="@string/resetPasswordText"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/forgotPasswordText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#BE000000"
                android:fontFamily="@font/droid_serif"
                />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/loginText"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:id="@+id/loginButton"
            android:layout_below="@id/forgotPasswordLayout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/continueAsGuestText"
            android:text="@string/continueAsGuest"
            android:textSize="16sp"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:textColor="#A9A9A9"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/droid_serif"
            />
    </RelativeLayout>
</RelativeLayout>