<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/profileActivityNavLayout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/arrowBackProfileActivityImg"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#A9A9A9"
            android:text="@string/backText"
            android:layout_toRightOf="@id/arrowBackProfileActivityImg"
            android:layout_centerVertical="true"
            android:id="@+id/backTextProfile"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileActivityNavLayout"
        android:id="@+id/profileActivityMainContainerLayout">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/profilepicdummy"
            android:id="@+id/userProfilePic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NameDisplayProfileActivityLayout"
            android:gravity="center"
            android:padding="20dp"
            android:layout_below="@+id/userProfilePic">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NameTextProfileActivity"
                android:textStyle="bold"
                android:fontFamily="@font/droid_serif"
                android:text="@string/nameText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_serif"
                android:textStyle="bold"
                android:id="@+id/accountHolderNameTextProfileActivity"
                android:layout_toRightOf="@+id/NameTextProfileActivity"
                android:layout_marginLeft="10dp"
                android:text="Username"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailDisplayProfileActivityLayout"
            android:gravity="center"
            android:layout_below="@id/NameDisplayProfileActivityLayout"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailText"
                android:textStyle="bold"
                android:fontFamily="@font/droid_serif"
                android:text="@string/emailText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accountHolderEmailTextProfileActivity"
                android:layout_toRightOf="@+id/emailText"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/droid_serif"
                android:text="example@gmail.com"/>

        </RelativeLayout>
        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="Logout"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:layout_centerHorizontal="true"
            android:id="@+id/logoutButton"
            android:layout_marginTop="20dp"
            android:layout_below="@id/emailDisplayProfileActivityLayout"/>
    </RelativeLayout>

</RelativeLayout>