<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerLoginActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/signUpActivityNavLayout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#A9A9A9"
            android:text="@string/backText"
            android:layout_toRightOf="@id/arrowBackSignUpImg"
            android:layout_centerVertical="true"
            android:id="@+id/backTextSignUp"/>
    </RelativeLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="50dp"
       android:id="@+id/loginContentLayout"
       android:layout_below="@+id/signUpActivityNavLayout">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:id="@+id/loginText"
           android:textStyle="bold"
           android:fontFamily="@font/roboto"
           android:text="Log in"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Hi,"
           android:textSize="24sp"
           android:textStyle="bold"
           android:layout_marginTop="20dp"
           android:id="@+id/hiText"
           android:fontFamily="@font/roboto"
           android:layout_below="@id/loginText"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Good Day!"
           android:textColor="@color/colorGreyShade"
           android:layout_toRightOf="@+id/hiText"
           android:textSize="24sp"
           android:textStyle="bold"
           android:fontFamily="@font/roboto"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="45dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Please Sign in to sell on HardBank"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/roboto"
           android:textSize="18sp"
           android:layout_below="@+id/hiText"/>
   </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="35dp"
        android:gravity="center"
        android:layout_below="@+id/loginContentLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/signInEmailEditTextLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:drawablePadding="20dp"
                android:paddingLeft="15dp"
                android:hint="Email Address"
                android:background="@drawable/edittext_border"
                android:id="@+id/signInEmailSellerEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInEmailEditTextLayout"
            android:id="@+id/signUpPasswordSellerEditTextLayout"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:hint="Password"
                android:id="@+id/signUpPasswordSellerEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/forgotPasswordLayout"
            android:layout_below="@+id/signUpPasswordSellerEditTextLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordText"
                android:text="@string/forgotPasswordText"
                android:textSize="16sp"
                android:textColor="#A9A9A9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_serif"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ResetPasswordTextSeller"
                android:text="@string/resetPasswordText"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/forgotPasswordText"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="#BE000000"
                android:fontFamily="@font/droid_serif"
                />
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/loginText"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:id="@+id/loginButton"
            android:layout_below="@id/forgotPasswordLayout"/>

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginActivityBottomLayout"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have a seller acoount?"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/doNotHaveSellerAcoountText"
            android:fontFamily="@font/roboto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@color/colorGreyShade"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/doNotHaveSellerAcoountText"
            android:id="@+id/signUpText"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
</RelativeLayout>